--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Agency - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="https://gestion.pe/resizer/aCOkJq2TD230D3RuayIL0eyPPjo=/980x528/smart/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/K7WHDXFB7VASRK7FCX5MLE5BEI.jpg" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
