--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Servicios DevOps</div>
-                                <div class="portfolio-caption-subheading text-muted">Ilustración</div>
+                                <div class="portfolio-caption-subheading text-muted">fomentar una cultura productiva</div>
                             </div>
                         </div>
                     </div>
@@ -111,8 +111,8 @@
                                 <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/wlKo9GWugn-P6cbknB0on_JV4MPfebhxUSyV9UjEbmmfPW1ExtetxiE6CkqBBpnngrluQoddy17l_C88CI-1TWAr6Mo8MslCQOt_B9w8gE0eMUMg8Ig" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
+                                <div class="portfolio-caption-heading">Servicios Big Datas</div>
+                                <div class="portfolio-caption-subheading text-muted">En Panel Sistemas implantamos soluciones Big Data de forma ágil y no disruptiva.</div>
                             </div>
                         </div>
                     </div>
@@ -122,11 +122,11 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="https://www.ituser.es/files/201704/big-data-analitica.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
+                                <div class="portfolio-caption-heading">Automatización</div>
+                                <div class="portfolio-caption-subheading text-muted">Descubre el nuevo concepto de software multidispositivo</div>
                             </div>
                         </div>
                     </div>
@@ -136,11 +136,11 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/05-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="https://previews.123rf.com/images/alexandersikov/alexandersikov1710/alexandersikov171000390/88114606-concepto-de-software-de-procesos-de-negocio-de-tecnolog%C3%ADa-de-sistema-de-automatizaci%C3%B3n-.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
+                                <div class="portfolio-caption-heading">Inmótica loT</div>
+                                <div class="portfolio-caption-subheading text-muted">plicaciones de supervisión en el ámbito de IoT y la Inmótica, capaces de recoger y procesar en tiempo real.</div>
                             </div>
                         </div>
                     </div>
@@ -150,11 +150,11 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="https://bdnetsite.com/img/ico_iot.jpg" alt=""
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                                <div class="portfolio-caption-heading">Aseguramiento de calidad</div>
+                                <div class="portfolio-caption-subheading text-muted">Integración Continua, DevOps, Gestión de Activos, Gestión de Proveedores </div>
                             </div>
                         </div>
                     </div>
