--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/wlKo9GWugn-P6cbknB0on_JV4MPfebhxUSyV9UjEbmmfPW1ExtetxiE6CkqBBpnngrluQoddy17l_C88CI-1TWAr6Mo8MslCQOt_B9w8gE0eMUMg8I" alt=""
+                                <img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSkV71yB3yxyqFNcbydCUabNgHpfY-Gx25RrmG9x44_4raJVWAV&usqp=CAU" alt=""
                             /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Servicios DevOps</div>
