--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </li>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>Be Part<br />Of Our<br />Story!</h4>
+                            <h4>Clientes<br />Satisfechos por<br />Nuestros servicios</h4>
                         </div>
                     </li>
                 </ul>
