--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Soluciones</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Servicios</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Clientes</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Proyectos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -225,15 +225,15 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Proyectos</h2>
+                    <h3 class="section-subheading text-muted">Son muchos los proyectos en Tecnologías de la Información que hemos puesto en marcha a lo largo de toda nuestra historia. A continuación puedes consultar un conjunto de nuestros proyectos más relevantes, fiel reflejo de la eficiencia y de la calidad de nuestros trabajos.</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
-                            <h4>Kay Garland</h4>
-                            <p class="text-muted">Lead Designer</p>
+                            <img class="mx-auto rounded-circle" src="https://godevel.com/images/portfolio/carousel-14.jpg" alt="" />
+                            <h4>Web AICO</h4>
+                            <p class="text-muted">AICO es una empresa dedicada a la gestión integral de eventos</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
