cambios de txt y imagenes
cambios de txt y img

--- a/index.html
+++ b/index.html
@@ -239,17 +239,17 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
-                            <h4>Larry Parker</h4>
-                            <p class="text-muted">Lead Marketer</p>
+                            <img class="mx-auto rounded-circle" src="https://godevel.com/images/portfolio/vign8.jpg" alt="" />
+                            <h4>IRIAM</h4>
+                            <p class="text-muted">Aplicación Windows para el control y análisis de facturación, cobros y deuda.</p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
-                            <h4>Diana Petersen</h4>
-                            <p class="text-muted">Lead Developer</p>
+                            <img class="mx-auto rounded-circle" src="https://godevel.com/images/portfolio/carousel-11.jpg" alt="" />
+                            <h4>TicTacMarketing</h4>
+                            <p class="text-muted">Tic Tac Marketing es nuestro nuevo partner estratégico de marketing: una empresa especializada en ofrecer soluciones profesionales </p>
                             <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
